refactor: update routing and improve database initialization